--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 # OpenRouter API Key
 # Get yours at https://openrouter.ai/keys
 OPENROUTER_API_KEY=your_api_key_here
+
+# Supabase - Required for authentication and API key management
+# Get these from: https://supabase.com/dashboard/project/_/settings/api
+PUBLIC_SUPABASE_URL=https://xxxxx.supabase.co
+PUBLIC_SUPABASE_ANON_KEY=eyJh9...
+SUPABASE_SERVICE_ROLE_KEY=eyJh9...
