--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "pnpm generate:icons && vite build",
+		"build:translations": "tsx scripts/translate-templates.ts",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -19,6 +20,10 @@
 		"cli:full": "tsx cli/index.ts",
 		"test": "vitest run --exclude '**/*.llm.test.ts'",
 		"test:llm": "vitest run",
+		"test:llm:all": "TEST_MODELS=all vitest run",
+		"test:llm:all:parallel": "TEST_MODELS=all vitest run --pool=forks --poolOptions.forks.singleFork=false",
+		"test:llm:oss": "TEST_MODELS=gpt-oss-120b,qwen3-32b vitest run",
+		"test:llm:oss:parallel": "TEST_MODELS=gpt-oss-120b,qwen3-32b vitest run --pool=forks --poolOptions.forks.singleFork=false",
 		"test:llm:log": "LOG_LLM_CALLS=true vitest run",
 		"test:llm:debug": "LOG_LLM_CALLS=true DEBUG_LLM=true vitest run",
 		"test:watch": "vitest --exclude '**/*.llm.test.ts'",
@@ -54,6 +59,7 @@
 		"@supabase/ssr": "^0.7.0",
 		"@supabase/supabase-js": "^2.81.1",
 		"marked": "^17.0.0",
+		"shiki": "^3.15.0",
 		"sveltekit-rate-limiter": "^0.7.0"
 	}
 }
